# metabsuir-fastapi

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3025c5fd322b_first.py  cad24fdcf315_user.py
app/: base.py  config.py  database.py  main.py  models.py  pagination.py
app/api/routes/: api.py  forum.py
app/auth/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
app/forum/: config.py  constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
app/profile/: config.py  models.py  router.py  schemas.py  service.py
app/subjects/: config.py  constants.py  models.py  router.py  schemas.py  service.py
app/templates/: reset_password.html
test/: test_forum.py
